test/functions/noOpBody.good
noOpBody.chpl:1: error: no-op procedures are only legal for extern functions
