test/functions/noOpBody.chpl
proc testit(a);

testit("hello");
